# tidmon-cli

./: .gitignore  CHANGELOG.md  COMMANDS.md  CONFIG_GUIDE.md  README.md  __init__.py  cli.py  comands.md  pyproject.toml  requirements.txt
cmd/: __init__.py  auth.py  backup.py  config.py  download.py  monitor.py  refresh.py  search.py  show.py
core/: auth.py  auth_client.py  auth_models.py  client.py  config.py  db.py  exceptions.py
core/models/: base.py
core/utils/: deezer.py  format.py  parse.py  url.py
src/core/: __init__.py  auth.py  auth_exceptions.py  client.py
src/core/models/: __init__.py  resources.py
src/core/utils/: cover.py  ffmpeg.py  metadata.py  playlist.py
src/tidmon/: __init__.py  cli.py
src/tidmon/cmd/: auth.py  backup.py  download.py  monitor.py  refresh.py  search.py  show.py
src/tidmon/core/: api.py  auth.py  auth_client.py  auth_models.py  client.py  config.py  db.py  downloader.py  web_login.py
src/tidmon/core/models/: base.py  resources.py
src/tidmon/core/utils/: __init__.py  ffmpeg.py  format.py  metadata.py  parse.py  startup.py
